--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 </head>
 
 <body>
-	<a href="week2.html">
-		<div class="updates">Latest research analysis</div>
-	</a>
 	<div class="page-one " id="brand">
 		<div class="logo-container">
 			<span class="name-start logo-span">Conv</span><span id="expansion" class="logo-span expansion">ersational </span>
@@ -29,10 +26,38 @@
 	<div class="timeline">
 		<div class="timeline-container right right-first">
 			<div class="content time-first">
-				2017
+				30th june
 			</div>
 			<div id="week-one">
 				<div id="story" class="container page">
+					<h1 class="mainhead">Analysis of current scenario</h1>
+					<p class="subbody"> We investigated the technical difficulties and technical assistance the blind people experienced with computers and computing applications.
+						Today's society is one that depends heavily on technology, particularly the use of computers. From banking to sending a basic email, computers have become quintessential part of our lifes.
+					</p>
+					<h1 class="subhead">Method</h1>
+					<p class="subbody"> We visited a local Blind and Handicapped school. We also contacted adults who had no remaining functional vision. The questions focused on frequency, nature and cause of issues.<br>
+						Conclusions: We noticed that most of the issues that were observed in both adults and students were mostly similar barring that student mostly faced issued with getting used to some technologies and the learning curve involved with it.
+					</p>
+					<h1 class="subhead">Results</h1>
+					<p class="subbody">
+						The majority of participants reported that change in Operating systems, updates and change of environments required huge learning curve.
+						Most people relied on tech support whenever they got stuck, and tech support relied on UI elements ( example: the blue bar on top in the browser) which are oten hard and confusing to understand.
+						With current TTS(Text-to-Speech) softwares, they can deal with most of the text online. But the problem arises when dealing with non-textual content such as images and pdfs.
+					</p>
+					<h1 class="subhead">Conclusion</h1>
+					<p class="subbody">
+						We found that most of the solutions that exist or are to be added are fundamentally flawed. What they should have is not a way to navigate systems that were never meant to be used by them, but a complete reboot resulting in a system desgined for them.
+						In conclusion, we think that technology is not even in earshot of where it needs to be in terms of usability by blind and handicapped people. This is not for the lack of trying. But because of the selfish nature of the routes we have taken so far. This has also brought to our attention the need for a proper method to ‘translate’ non-textual media in a way that the visually impaired can also use.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="timeline-container right">
+			<div class="content">
+				The begining
+			</div>
+			<div id="week-one">
+				<div id="second" class="container page">
 					<h1 class="storyhead subhead">The story</h1>
 					<p class="storybody subbody">My breakthrough came when I realised that I had been asking all the wrong questions. I had spent weeks trying to invent new ways to navigate existing systems, but what if those systems were fundamentally flawed? What if the experience required a radical reinvention of everything, the whole OS designed specifically with voice and simple interactions in mind capitulated by intelligent predictions.
 						After all if we strip away all the chrome, all the Aero and Paper and Frosted Glass, all the evidence of the “design systems” companies have poured billions into developing and maintaining, we come face to face with a skeleton of XEROX PARC’s 1973 invention. The desktop was never meant to work for the blind or handicapped, all efforts to extend the capabilities, in the end, they were all just crude workarounds, band-aids on a rotting wound.
@@ -82,147 +107,13 @@
 							<img class="container m-5" src="example.gif">
 						</p>
 				</div>
-			</div> 
-		</div>
-		<div class="timeline-container right">
-			<div class="content">
-				2016
-			</div>
-			<div id="week-one">
-				<div id="story" class="container page">
-					<h1 class="storyhead subhead">The story</h1>
-					<p class="storybody subbody">My breakthrough came when I realised that I had been asking all the wrong questions. I had spent weeks trying to invent new ways to navigate existing systems, but what if those systems were fundamentally flawed? What if the experience required a radical reinvention of everything, the whole OS designed specifically with voice and simple interactions in mind capitulated by intelligent predictions.
-						After all if we strip away all the chrome, all the Aero and Paper and Frosted Glass, all the evidence of the “design systems” companies have poured billions into developing and maintaining, we come face to face with a skeleton of XEROX PARC’s 1973 invention. The desktop was never meant to work for the blind or handicapped, all efforts to extend the capabilities, in the end, they were all just crude workarounds, band-aids on a rotting wound.
-					</p>
-				</div>
-				<div id="problem" class="container page">
-					<h1 class="problemhead subhead">The problem</h1>
-					<p class="problembody subbody">Before creating any great solution, a designer must come in terms with the problems that exist. After a bit of reading, I found a book “The Humane Interface”, in which Jef Raskin (the founder of the Macintosh project) asserted that the desktop interface strategy was “inefficient and inhumane”.
-						The key arguments he put forth were :-
-						<li class="subbody"><b>The Desktop environment enables Applications to exist.</b></li>
-						<p class="problembody subbody">
-							Apps are modes, and anything modal in an interface sets the user up for errors and slips. Plus, the more ways there are to do something, the more complex interactions become and harder to achieve through voice.</p>
-						<li class="subbody"><b>The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.</b></li>
-						<li class="subbody"><b>File naming and organisation as a whole is an exercise in futility.</b></li>
-						<p class="problembody subbody">
-							When saving a document, for example, our locus of attention is not on coming up with a unique and memorable name—we just want to save our work. Seemingly minor moments of friction such as this burdens our cognitive load, distracting us from our intentions and from entering flow state.</p>
-					</p>
-				</div>
-				<div id="idea" class="container page">
-					<h1 class="problemhead subhead">The idea</h1>
-					<p class="problembody subbody">The core idea is to create an OS that responds to human intent, driven by simple conversations. An OS designed with short predictable interactions where the user is heavily assisted by an AI, thereby reducing cognitive load.
-						Redesign the entire OS following 3 fundamental rules -
-						<ol class="subbody">
-							<li><b>Natively Conversable</b></li>
-							<li><b>Focused and Predictable</b></li>
-							<li><b>Fast and Fluid</b></li>
-						</ol>
-					</p>
-				</div>
-				<div id="architecture" class="container page">
-					<h1 class="problemhead subhead">The Architecture</h2>
-						<p class="problembody subbody">
-							<h2>Actions</h2>
-							<p>On an atomic level, convai is composed of actions. Actions are results of commands based on user requests. They can further create actions or display content and end.</p>
-							<img class="container m-5" src="action.png">
-							<h2>Flows</h2>
-							<p>Several actions together constitute a flow of information or commands. They create logical meaning together and simply convey the required information in an easy to understand way. Each action in a flow is numbered ignorer to move forward and backward between them.</p>
-							<img class="container m-5" src="flow.png">
-							<h2>Search</h2>
-							<p>Any query the user asks goes through search, contextual understanding of the query enables the OS to create the correct actions to further the query or provide information. Search can be invoked in any screen by a desired keyword, and the user can naturally speak to it ignorer to get things done.</p>
-							<h2>Overview</h2>
-							<p>The user is presented with a birds-eye view of every action inside the space. </p>
-							<img class="container m-5" src="overview.png">
-							<h2>Examples</h2>
-							<p>Here are some examples</p>
-							<img class="container m-5" src="overview.gif">
-							<img class="container m-5" src="example.gif">
-						</p>
-				</div>
-			</div>			
-		</div>
-		<div class="timeline-container right">
-			<div class="content">
-				<h2>2015</h2>
 			</div>
 		</div>
-		<div class="timeline-container right">
-			<div class="content">
-				<h2>2012</h2>
-			</div>
-		</div>
-		<div class="timeline-container right">
-			<div class="content">
-				<h2>2011</h2>
-			</div>
-		</div>
-		<div class="timeline-container right">
-			<div class="content">
-				<h2>2007</h2>
-			</div>
-		</div>
-	</div>
-	<div id="week-one">
-		<div id="story" class="container page">
-			<h1 class="storyhead subhead">The story</h1>
-			<p class="storybody subbody">My breakthrough came when I realised that I had been asking all the wrong questions. I had spent weeks trying to invent new ways to navigate existing systems, but what if those systems were fundamentally flawed? What if the experience required a radical reinvention of everything, the whole OS designed specifically with voice and simple interactions in mind capitulated by intelligent predictions.
-				After all if we strip away all the chrome, all the Aero and Paper and Frosted Glass, all the evidence of the “design systems” companies have poured billions into developing and maintaining, we come face to face with a skeleton of XEROX PARC’s 1973 invention. The desktop was never meant to work for the blind or handicapped, all efforts to extend the capabilities, in the end, they were all just crude workarounds, band-aids on a rotting wound.
-			</p>
-		</div>
-		<div id="problem" class="container page">
-			<h1 class="problemhead subhead">The problem</h1>
-			<p class="problembody subbody">Before creating any great solution, a designer must come in terms with the problems that exist. After a bit of reading, I found a book “The Humane Interface”, in which Jef Raskin (the founder of the Macintosh project) asserted that the desktop interface strategy was “inefficient and inhumane”.
-				The key arguments he put forth were :-
-				<li class="subbody"><b>The Desktop environment enables Applications to exist.</b></li>
-				<p class="problembody subbody">
-					Apps are modes, and anything modal in an interface sets the user up for errors and slips. Plus, the more ways there are to do something, the more complex interactions become and harder to achieve through voice.</p>
-				<li class="subbody"><b>The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.</b></li>
-				<li class="subbody"><b>File naming and organisation as a whole is an exercise in futility.</b></li>
-				<p class="problembody subbody">
-					When saving a document, for example, our locus of attention is not on coming up with a unique and memorable name—we just want to save our work. Seemingly minor moments of friction such as this burdens our cognitive load, distracting us from our intentions and from entering flow state.</p>
-			</p>
-		</div>
-		<div id="idea" class="container page">
-			<h1 class="problemhead subhead">The idea</h1>
-			<p class="problembody subbody">The core idea is to create an OS that responds to human intent, driven by simple conversations. An OS designed with short predictable interactions where the user is heavily assisted by an AI, thereby reducing cognitive load.
-				Redesign the entire OS following 3 fundamental rules -
-				<ol class="subbody">
-					<li><b>Natively Conversable</b></li>
-					<li><b>Focused and Predictable</b></li>
-					<li><b>Fast and Fluid</b></li>
-				</ol>
-			</p>
-		</div>
-		<div id="architecture" class="container page">
-			<h1 class="problemhead subhead">The Architecture</h2>
-				<p class="problembody subbody">
-					<h2>Actions</h2>
-					<p>On an atomic level, convai is composed of actions. Actions are results of commands based on user requests. They can further create actions or display content and end.</p>
-					<img class="container m-5" src="action.png">
-					<h2>Flows</h2>
-					<p>Several actions together constitute a flow of information or commands. They create logical meaning together and simply convey the required information in an easy to understand way. Each action in a flow is numbered ignorer to move forward and backward between them.</p>
-					<img class="container m-5" src="flow.png">
-					<h2>Search</h2>
-					<p>Any query the user asks goes through search, contextual understanding of the query enables the OS to create the correct actions to further the query or provide information. Search can be invoked in any screen by a desired keyword, and the user can naturally speak to it ignorer to get things done.</p>
-					<h2>Overview</h2>
-					<p>The user is presented with a birds-eye view of every action inside the space. </p>
-					<img class="container m-5" src="overview.png">
-					<h2>Examples</h2>
-					<p>Here are some examples</p>
-					<img class="container m-5" src="overview.gif">
-					<img class="container m-5" src="example.gif">
-				</p>
-		</div>
-		<div>
-			<hr class="seperator-one">
-			<hr class="seperator">
-			<span class="seperator-date">2nd july</span>
-		</div>
-	</div>
-	<div id="goodbye" class="container page">
+
+<!-- 	<div id="goodbye" class="container page">
 		<h1>More to follow.</h1>
 	</div>
-	<p class="placeholder"> </p>
+	<p class="placeholder"> </p> -->
 </body>
 
 </html>
