--- a/index.html
+++ b/index.html
@@ -36,14 +36,36 @@
 <!--  ADD CONTENT HERE. USE CLASSES 'mainhead', 'subbody' and 'subhead' for formatting. -->
 <!-- =============================================================================================== -->
 <!-- =============================================================================================== -->
-					<h1 class="mainhead">Analysis of current scenario</h1>
-					<p class="subbody"> We investigated the technical difficulties and technical assistance the blind people experienced with computers and computing applications.
-						Today's society is one that depends heavily on technology, particularly the use of computers. From banking to sending a basic email, computers have become quintessential part of our lifes.
+					<h1 class="mainhead">Further investigation of the problem</h1>
+
+					<p class="subbody"> After a successful code sprint for a week, we finished certain fundamental parts of the OS. We wanted the system to be scalable such that anyone could develop a module and it should be easily integrated. More about that will be shared later this week in a blog post.<br>
+					But after that we needed to build some actual modules, in-order to do so we needed to first understand some fundamental problems faced by blind people when they operate computers and mobile phones. <br>
+					We visited the school for blind in Aluva Kochi. We had a wonderful opportunity to interact with the students and teachers and also established contacts with some prominent personalities in this field.
 					</p>
-					<h1 class="subhead">Method</h1>
-					<p class="subbody"> We visited a local Blind and Handicapped school. We also contacted adults who had no remaining functional vision. The questions focused on frequency, nature and cause of issues.<br>
-						Conclusions: We noticed that most of the issues that were observed in both adults and students were mostly similar barring that student mostly faced issued with getting used to some technologies and the learning curve involved with it.
+					<img src="school.jpg" class="container m-5">
+					<h1 class="subhead">Problem 1 - File Navigation</h1>
+					<iframe width="853" height="480" src="https://www.youtube.com/embed/9eHNYcLL9d0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</iframe>
+					<p class="subbody">As you can see the above video, the student is finding it very difficult to navigate to an audio file. We believe that file structures are just unnecessary organizational tools that make it difficult to navigate using your voice. The system should simply open the current file on invocation or speak out the files present on a simply query.
+					</p>	
+					<h1 class="subhead">Problem 2 - Lack of Coordination </h1>
+					<iframe width="900" height="506" src="https://www.youtube.com/embed/dxx1FftM4tE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</iframe>
+					<p class="subbody">Certain students have other problems like lack of coordination that disables them to mind map the keyboard, the student in the above video stills finds it difficult after learning to use the keyboard for more than 3 years. A simple voice based interface would solve this problem.
+					</p>					
+					<h1 class="subhead">Problem 3 - Grid and Menus</h1>
+					<iframe width="900" height="506" src="https://www.youtube.com/embed/U8T81ZvlfMs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</iframe>
+					<p class="subbody">In this video, the student is painfully navigating the menu screen that we take for granted. Grids menus lists etc are not created following humane principles of design and must be completely rethought in-order to make it easily accessible.
+					</p>					
+					<h1 class="subhead">Problem 4 - Limitations in Google Assistant</h1>
+					<iframe width="900" height="506" src="https://www.youtube.com/embed/_9UfTQDfXlE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</iframe>
+					<p class="subbody">Students find it very easy to use voice assistants but currently the interface is hard to navigate due to the inconsistency in outputs.<br>
+We have created a system which we believe addresses these problems and next week we would show videos of the system being used by the students to complete basic tasks, and to collect their feedback and improve on that. Also we would post about our meeting with Mr Satyan Sir, who his himself visually impaired and has worked in this field all his lifetime.
+
 					</p>
+					<img src="children.jpg" class="container m-5">
 <!-- =============================================================================================== -->
 <!-- =============================================================================================== -->
 <!-- =============================================================================================== -->
