--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 	<div class="timeline">
 		<div class="timeline-container right right-first">
 			<div class="content time-first">
-				6th july
+				15th july
 			</div>
-			<div id="week-two">
+			<div id="week-three">
 				<div id="story" class="container page">
 
 <!-- =============================================================================================== -->
@@ -36,6 +36,31 @@
 <!--  ADD CONTENT HERE. USE CLASSES 'mainhead', 'subbody' and 'subhead' for formatting. -->
 <!-- =============================================================================================== -->
 <!-- =============================================================================================== -->
+					<h1 class="mainhead">A better file system.</h1>
+
+					<p class="subbody">After last week's visit to the local blind school, one of the most immediate problems that we could solve for them was the tedious task of file navigation. Using the mouse to move the cursor and select a file from an open window is something that we take for granted. But for them, it means laboriously listening to each item of a list and selecting them through the keyboard.
+					</p>
+					<p class="subbody">After a thorough evaluation and discussion, we arrived at the conclusion that this system had to go. Navigating through folders and files would be too absurd for someone who has never seen the graphical user interface. The solution we arrived at was something similar to Google web search. Instead of focusing on how to organise files, we began to think how to access the files once started. 
+					</p>
+					<p class="subbody">Multiple tags would be associated with files. These tags would give information about what type of file this was, time of creation and other general stuff. We had to build a small module that could, for the time being, work on their current systems. For that we created a ‘file crawler’ which would index all the existing files in the system and intelligently associate these files with the aforementioned tags.
+					</p>
+					<p class="subbody">Once this was done, accessing a  file was as simple as asking for it. The diversity of the tags allowed for searching based on multiple different parameters. Needless to say, this searching feature was created with the ability to fully manipulate it using voice in mind. Using some of Google’s regional voice libraries, and some fuzzy searching algorithms, we were able to acquire very good accuracy even with local accents and regional language based file names.
+					</p>
+<!-- 					<iframe width="900" height="506" src="https://www.youtube.com/embed/dxx1FftM4tE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+				
+<!-- =============================================================================================== -->
+<!-- =============================================================================================== -->
+<!-- =============================================================================================== -->
+
+				</div>
+			</div>
+		</div>	<div class="timeline-container right">
+			<div class="content">
+				6th july
+			</div>
+			<div id="week-two">
+				<div class="container page">
+
 					<h1 class="mainhead">Further investigation of the problem</h1>
 
 					<p class="subbody"> After a successful code sprint for a week, we finished certain fundamental parts of the OS. We wanted the system to be scalable such that anyone could develop a module and it should be easily integrated. More about that will be shared later this week in a blog post.<br>
@@ -56,19 +81,16 @@
 					<h1 class="subhead">Problem 3 - Grid and Menus</h1>
 					<iframe width="900" height="506" src="https://www.youtube.com/embed/U8T81ZvlfMs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</iframe>
-					<p class="subbody">In this video, the student is painfully navigating the menu screen that we take for granted. Grids menus lists etc are not created following humane principles of design and must be completely rethought in-order to make it easily accessible. Even though most kids have memorised the qwerty keyboard layout by now, using the touch keyboard on a phone still proves tiresome.
+					<p class="subbody">In this video, the student is painfully navigating the menu screen that we take for granted. Grids menus lists etc are not created following humane principles of design and must be completely rethought in-order to make it easily accessible.
 					</p>					
 					<h1 class="subhead">Problem 4 - Limitations in Google Assistant</h1>
 					<iframe width="900" height="506" src="https://www.youtube.com/embed/_9UfTQDfXlE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</iframe>
 					<p class="subbody">Students find it very easy to use voice assistants but currently the interface is hard to navigate due to the inconsistency in outputs.<br>
-We have created a system which we believe addresses these problems and next week we would show videos of the system being used by the students to complete basic tasks, and to collect their feedback and improve on that. Also we would post about our meeting with Mr Satyan Sir, who himself is visually impaired and has worked in this field all his lifetime.
+We have created a system which we believe addresses these problems and next week we would show videos of the system being used by the students to complete basic tasks, and to collect their feedback and improve on that. Also we would post about our meeting with Mr Satyan Sir, who his himself visually impaired and has worked in this field all his lifetime.
 
 					</p>
 					<img src="children.jpg" class="container m-5">
-<!-- =============================================================================================== -->
-<!-- =============================================================================================== -->
-<!-- =============================================================================================== -->
 
 				</div>
 			</div>
